--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -118,15 +118,15 @@ appears on the left side of the page.
       */
 #menu .pure-menu li a:hover,
 #menu .pure-menu li a:focus {
-  background: #333;
+  color: #eee;
+  background: #ef5533;
 }
 
 /*
   This styles the selected menu item `<li>`.
   */
-#menu .pure-menu-selected,
 #menu .pure-menu-heading {
-  background: #1f8dd6;
+  font-weight: 600;
 }
 /*
       This styles a link within a selected menu item `<li>`.
@@ -148,7 +148,7 @@ appears on the left side of the page.
 
 /*
 The button to open/close the Menu is custom-made and not part of Pure. Here's
-how it works:
+how it works
 */
 
 /*
