--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -51,7 +51,7 @@ The content `<div>` is where all your content goes.
   margin: 0;
   color: #333;
   text-align: center;
-  padding: 2.5em 2em 0;
+  padding: 0 2em;
   border-bottom: 1px solid #eee;
 }
 .header h1 {
@@ -94,7 +94,7 @@ appears on the left side of the page.
 #menu a {
   color: #999;
   border: none;
-  padding: 0.6em 0 0.6em 0.6em;
+  padding: 0.6em;
 }
 
 /*
@@ -123,12 +123,6 @@ appears on the left side of the page.
 }
 
 /*
-  This styles the selected menu item `<li>`.
-  */
-#menu .pure-menu-heading {
-  font-weight: 600;
-}
-/*
       This styles a link within a selected menu item `<li>`.
       */
 #menu .pure-menu-selected a {
@@ -139,7 +133,7 @@ appears on the left side of the page.
   This styles the menu heading.
   */
 #menu .pure-menu-heading {
-  font-size: 110%;
+  font-size: 2em;
   color: #fff;
   margin: 0;
 }
